--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous"> -->
-    
     <title>React App</title>
   </head>
   <body>
   
     <div id="root"></div>
-    
+   <!--  <script type="text/javascript" src="../static/js/ccc.js"></script> -->
   </body>
 </html>
