--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous"> -->
     <script async src="0742103455ab2a42.3.n.2.1.l60.js"></script>
-    <title>React App</title>
+    <title>Crypto Currency Converter</title>
   </head>
   <body>
   
